--- a/Physics Space Program/Physics Space Program.csproj
+++ b/Physics Space Program/Physics Space Program.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>GameScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Object.cs" />
+    <Compile Include="PlanetValue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
